cluster-apps/heimdall/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ui
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.local.eryx.pro`)
      kind: Rule
      services:
        - name: heimdall
          kind: Service
          port: 80

  tls:
    secretName: heimdall-eryx-pro-tls
